fixed startup logo stretching, imageStoragePath / recent capture in admin add club, camera plugin

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
   }
   
   html,
+
   body {
     height: 100%;
     width: 100%;
@@ -232,7 +233,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 50vh;
     position: relative;
   }
   
